Implemented Message-Api and corrected bugs
